--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <div id="mHeader" class="container">
 
 
-              <div class="row">
-                  <div class="col-md-6">Matthew Musich</div>
-                  <div class="col-md-6">GitHub Linkedin Resume Email</div>
+              <div class="row" style="border-bottom: 2px solid #ccc;">
+                  <div class="col-md-6" style="color: #011627;"><h1>Matthew Musich</h1></div>
+                  <div class="col-md-6" style="margin-top: 15px; color: #011627;"><h3>GitHub Linkedin Resume Email</h3></div>
               </div>
               
               
