--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body style="background-color: #FDFDFF;">
+  <body style="background-color: #F5F5F5;">
     
       <div>
 
@@ -28,7 +28,7 @@
 
 
               <div class="row" style="border-bottom: 2px solid #777;">
-                  <div class="col-md-6" ><h1><span class="mainText">Matthew Musich</span></h1></div>
+                  <div class="col-md-6" ><h1><span class="highText">Matthew Musich</span></h1></div>
                   <div class="col-md-6" style="margin-top: 15px; text-align: right;"><h4><span class="mainText">
                       <a id="popoverData" class="btn" target="_blank" href="https://github.com/mattmusich" data-content="GitHub" rel="popover" data-placement="bottom" data-trigger="hover"><img src="source/GitHub-Mark-32px.png" alt="GitHub"></a>
                       <a id="popoverData2" class="btn" target="_blank" href="https://www.linkedin.com/in/matthew-musich-1a254782" data-content="Linkedin" rel="popover" data-placement="bottom" data-trigger="hover"><img src="source/In-Black-34px-R.png" alt="Linkedin"></a>
@@ -47,7 +47,7 @@
           <div id="mContent" class="container">
 
           <div style="padding-top: 20px; padding-bottom: 20px;">
-              <h1><span class="mainText">Projects</span></h1>
+              <h2><span class="highText">Projects</span></h2>
           </div>
               
             <div class="row rowFrame" >
