--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div class="col-md-9">
                 <h3><span class="mainText">Marist College - Transfer Evaluations</span> <small>React, Javascript, jQuery, HTML5/Boostrap</small></h3>
                   <h4>Source: <a href="https://www.capping.xyz/login.html">capping.xyz</a></h4>
-                  <h4>Web application that allows possible transfer students to quickly and easily determine how many credits will transfer to Marist College. <br> This was a group project for Marist capping, where I was tasked with front-end development</h4>
+                  <h4>Web application that allows possible transfer students to quickly and easily determine how many credits will transfer to Marist College. <br> This was a group project for Marist capping, where I was tasked with Front End development</h4>
                   
               </div>
           </div>    
